--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
+    "swiper": "^11.1.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
